# airflow-dlt-s3-data-pipeline

./: README.md  docker-compose.yaml  dockerfile  pyproject.toml
data/latest/: init
data/latest/_dlt_loads/: freecurrency__1775655557.518389.jsonl
data/latest/_dlt_pipeline_state/: freecurrency_pipeline__1775655557.518389__a40691b2116b2e3614bde97fe3c47a3b6d2d640df3d089f3479b03f96082c850.jsonl
data/latest/_dlt_version/: freecurrency__1775655559.6671908__a40691b2116b2e3614bde97fe3c47a3b6d2d640df3d089f3479b03f96082c850.jsonl
ingestion/: pipeline.py  source.py
projeto-01-ingestao/dags/: currency_ingestion_dag.py
projeto-01-ingestao/scripts/: ready_parquet.py  script-01.py  script_03.py
scripts/: script_02.py
